--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,7 +1,88 @@
+body {
+	font-family: Roboto;
+	background: #1c92d2;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #f2fcfe, #1c92d2);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #f2fcfe, #1c92d2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+ 	W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
 #container {
-	border: 2px solid gray;
-	margin: 0 auto;
+	box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+	margin: 100px auto;
 	width: 360px;
+	background-color: #f7f7f7;
+}
+
+.fa-trash-alt {
+	/*float: right;*/
+	padding-top: 10px;
+}
+
+.fa-plus {
+	float: right;
+}
+
+h1 {
+	background-color: #2980b9;
+	font-weight: normal;
+	font-size: 24px;
+	color: white;
+	margin: 0;
+	padding: 10px 20px;
+	text-transform: uppercase;
+}
+
+li {
+	background-color: #fff;
+	height: 40px;
+	line-height: 40px;
+	color: #666;
+
+}
+
+li:nth-child(2n){
+	background-color: #f7f7f7;
+}
+
+li span {
+	background-color: #e74c3c;
+	height: 40px;
+	width: 0px;
+	margin-right: 20px;
+	text-align: center;
+	color: white;
+	display: inline-block;
+	opacity: 0;
+	transition: 0.6s linear;
+}
+
+li:hover span {
+	width: 40px;
+	opacity: 1.0;
+}
+
+input {
+	width: 100%;
+	font-size: 18px;
+	padding: 13px 13px 13px 20px;
+	box-sizing: border-box;
+	color: #2980b9;
+	background-color: #f7f7f7;
+	outline: none;
+	border: 3px solid rgba(0, 0, 0, 0);
+}
+
+input:focus {
+	background-color: #fff;
+	border: 3px solid #2980b9;
+	outline: none;
+}
+
+
+ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
 
 .taskList {
